# PyMailAI

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: coverage.yml  docs.yml  tests.yml
docs/: Makefile
docs/source/: attachments.rst  conf.py  examples.rst  index.rst  quickstart.rst
docs/source/api/: agent.rst  client.rst  config.rst  index.rst  message.rst  tools.rst
examples/: anthropic_completion.py  email_tool_example.py  get_gmail_token.py  gmail_credentials.py  gmail_service_account.py  ollama_completion.py  openai_completion.py  openai_completion_with_threading.py  simple_ai_agent.py  todo_label_processor.py
src/pymailai/: __init__.py  agent.py  base_client.py  client.py  config.py  email_processor.py  email_reply.py  email_validator.py  gmail.py  gmail_client.py  html_converter.py  markdown_converter.py  message.py  text_processor.py  tools.py
src/pymailai/tools/: __init__.py  core.py  schemas.py
tests/: test_agent.py  test_client.py  test_client_comprehensive.py  test_core.py  test_gmail.py  test_gmail_client.py  test_gmail_comprehensive.py  test_gmail_service_account.py  test_markdown_converter.py  test_message.py  test_message_markdown.py  test_message_multipart.py  test_message_threading.py
